--- a/sass/components/_basics.sass
+++ b/sass/components/_basics.sass
@@ -20,6 +20,17 @@ main
 .white
     color: white
 
+.black
+    color: black
+
+.btn-x
+    font-size: 18px
+    font-weight: bold
+    padding: 10px
+    border-radius: 5px
+    text-align: center
+
+
 .nav,
 .footer
     height: 100px
