--- a/sass/components/_media-queries.sass
+++ b/sass/components/_media-queries.sass
@@ -1,5 +1,7 @@
 
 @media (max-width: 767px)
+    .m-auto-sm
+        margin: auto
 
     .navbar-icons-box
         width: 90px
@@ -21,9 +23,6 @@
     .input-box
         input
             width: 100%
-
-    .detail-result-main-box
-        margin: auto
     
     .search-main-box,
     .detail-result-main-box
@@ -35,10 +34,6 @@
     .detail-carousel-item
         img
             height: 300px
-
-    .general-data-box
-        div
-            margin: auto
     
     .google-map
         iframe
@@ -47,13 +42,9 @@
     .video
         iframe
             height: 180px
-    .footer
-        div
-            margin: auto
+
     .ti-box
         padding: 40px
-        .ti-text-box
-            margin: auto
         img
             display: block
             margin: 30px auto 0 auto
@@ -76,18 +67,17 @@
     
     .search-button
         width: 30%
+        display: inline-block
 
     .input-box
         input
-            width: 69.2%
+            width: 69%
 
     .selectors-box
         +d-flex(center, center)
     
-    .search-main-box,
-    .detail-result-main-box
+    .search-main-box
         width: 90%
-        margin: auto
     
     .detail-carousel-item
         img
@@ -124,7 +114,6 @@
     
     .detail-result-main-box
         width: 80%
-        margin: auto
     
     .video
         iframe
