--- a/sass/components/home/_main-home.sass
+++ b/sass/components/home/_main-home.sass
@@ -12,17 +12,7 @@ main
                     margin-bottom: 10px
                     font-weight: bold
                 .input-box
-                    input
-                        font-size: 18px
-                        padding: 10px
-                        border-radius: 5px
-                        font-weight: bold
-                    .btn
-                        font-size: 18px
-                        font-weight: bold
-                        padding: 10px
-                        border-radius: 5px
-                        text-align: center
+                    .btn-x
                         a
                             &:hover
                                 color: $footer-bg
@@ -32,20 +22,14 @@ main
                 background: $search-box-bg
                 margin-top: 15px
                 margin-left: 30%
-                a
-                    color: black
-                    font-weight: bold
     .it-works-main-box
         width: 90%
         .iw-title
             margin-top: 20px
             color: $navbar-bg
-            font-weight: bold
-            text-align: center
         .it-row
             opacity: .8
             div
-                text-align: center
                 h3
                     margin-top: 15px
                 i
