--- a/sass/components/_media-queries.sass
+++ b/sass/components/_media-queries.sass
@@ -45,7 +45,7 @@
 
     .ti-box
         padding: 40px
-        img
+        .ti-imgs
             display: block
             margin: 30px auto 0 auto
             width: 150px
@@ -83,7 +83,7 @@
         img
             height: 600px
     
-    .general-data-box
+    .general-data-main-box
         div
             +d-flex(center, space-around)
     
@@ -97,12 +97,12 @@
     
     .footer
         +d-flex(center, space-around)
-        ul
+        .footer-ul
             width: 350px
     .ti-box
         +d-flex(center, space-around)
         padding: 20px
-        img
+        .ti-imgs
             width: 250px
             height: 250px
 
@@ -119,7 +119,7 @@
         iframe
             height: 430px
     .it-row
-        div
+        .explanation-box
             padding: 50px 50px
 
 @media (min-width: 1440px)
@@ -150,7 +150,7 @@
             height: 400px
 
     .it-row
-        div
+        .explanation-box
             padding: 50px 130px
 
 
@@ -160,7 +160,7 @@
         display: none
     .it-row
         padding: 0 50px
-        div
+        .explanation-box
             margin-top: 20px
 
 @media (max-width: 1439px)
