--- a/sass/components/detail/_main-detail.sass
+++ b/sass/components/detail/_main-detail.sass
@@ -2,46 +2,51 @@
 .detail-result-main-box
     .detail-result-1
         margin-top: 30px
-    .description-main-box
-        .general-data-box
-            div
-                width: 90%
-                table
-                    tr
-                        margin-top: 20px
-                        td 
-                            padding: 10px 0
-                            i
-                                font-size: 35px
-                                color: $description
-                            span
-                                font-size: 20px
-                                margin-left: 5px
-        .description-box
-            p
-                font-size: 20px
-                margin-top: 0
-        .send-message-box
-            .form-box
-                .form-group
-                    input
-                        &::placeholder
-                            opacity: .3
-                button
-                    width: 100%
+
+
+.general-data-main-box
+    .general-data-box
+        width: 90%
+
+.gd-table
+    tr
+        margin-top: 20px
+
+.gd-icons
+    font-size: 35px
+    color: $description
+
+.input
+    padding: 10px 0
+
+.gd-text
+    span
+        font-size: 20px
+        margin-left: 10px
+
+.description-box
+    p
+        font-size: 20px
+        margin-top: 0
+
+.form-group
+    input
+        &::placeholder
+            opacity: .3
 
 .icons-description-box
     +d-flex(center, center)
     padding: 15px 0
-    a
-        color: $description
-        &:hover
-            color: black
-        i
-            font-size: 30px
+
+.id-links
+    color: $description
+    &:hover
+        color: black
+    .id-icons
+        font-size: 30px
 
 
-.general-data-box,
+.general-data-main-box,
 .description-box,
 .video-box,
 .location-box,
