--- a/sass/components/result/_main-result.sass
+++ b/sass/components/result/_main-result.sass
@@ -2,17 +2,15 @@
     margin-top: 30px
 
 .result-carousel-item
-    img
+    .rci-imges 
         height: 300px
         width: 100%
 
 .carousel
-    a
-        span
-            i
-                font-size: 70px
-                position: absolute
-                bottom: 0
+    i
+        font-size: 70px
+        position: absolute
+        bottom: 0
 
 .fa-angle-left
     right: 0
@@ -24,27 +22,29 @@
     height: 220px
     padding: 10px
     background: $result-box-bg
-    a
-        h3
-            color: $title-card
-    p
-    .description
-        color: $description
+
+.rtb-title
+    color: $title-card
+
+.description
+    color: $description
 
 .filters-main-box
-    h1
+    .filters-title
         color: black
-    .filters-box
-        background: $search-box-bg
-        border-radius: 5px
-        padding: 20px
-        .selectors-box
-            select
-                font-size: 18px
-                height: 100%
-                padding: 10px
-            .filters-button
-                background: $navbar-bg
+
+.filters-box
+    background: $search-box-bg
+    border-radius: 5px
+    padding: 20px
+
+.selectors-box
+    .selectors-select
+        font-size: 18px
+        height: 100%
+        padding: 10px
+    .filters-button
+        background: $navbar-bg
 
 
 
