--- a/sass/components/_footer.sass
+++ b/sass/components/_footer.sass
@@ -1,11 +1,12 @@
 .footer
     background: $footer-bg
-    ul
+    .footer-ul
         +d-flex(center, space-around)
         margin-bottom: 0
-        a
-            font-size: 16px
-            font-weight: lighter
-            &:hover
-                color: white
+
+.footer-ul-a
+    font-size: 16px
+    font-weight: lighter
+    &:hover
+        color: white
 
