--- a/sass/components/_navbar.sass
+++ b/sass/components/_navbar.sass
@@ -1,21 +1,24 @@
 .nav
     background: $navbar-bg
-    .navbar-logo-box
-        +d-flex(center, space-around)
-        padding: 0 15px
-        img
-            height: 60px
-        h5
-            font-size: 45px
-            margin-left: 20px 
-    .navbar-icons-box
-        +d-flex(center, space-around)
-        a
-            i
-                font-size: 25px
-                span
-                    margin-left: 25px
-                    font-size: 25px
-                    font-weight: lighter
+
+.navbar-logo-box
+    +d-flex(center, space-around)
+    padding: 0 15px
+    .logo
+        height: 60px
+    .nav-title
+        font-size: 45px
+        margin-left: 20px 
+
+.navbar-icons-box
+    +d-flex(center, space-around)
+    .fa-search,
+    .fa-poll
+        font-size: 25px
+
+.nav-icons-span
+    margin-left: 25px
+    font-size: 25px
+    font-weight: lighter
 
 
