--- a/sass/components/home/_main-home.sass
+++ b/sass/components/home/_main-home.sass
@@ -1,54 +1,59 @@
-main
-    .main-bg
-        .search-main-box
-            padding: 20px
-            h1
-                margin-top: 0
-            .search-box
-                background: $search-box-bg
-                border-radius: 5px
-                padding: 20px
-                h5
-                    margin-bottom: 10px
-                    font-weight: bold
-                .input-box
-                    .btn-x
-                        a
-                            &:hover
-                                color: $footer-bg
-                    .search-button
-                        background: $navbar-bg
-            .hiw-button
-                background: $search-box-bg
-                margin-top: 15px
-                margin-left: 30%
-    .it-works-main-box
-        width: 90%
-        .iw-title
-            margin-top: 20px
-            color: $navbar-bg
-        .it-row
-            opacity: .8
-            div
-                h3
-                    margin-top: 15px
-                i
-                    font-size: 50px
-    .three-imgs-main-box
-        .ti-box
-            .ti-text-box
-                h4
-                    margin-bottom: 15px
-                .ti-btn
-                    background: white
-            img
-                border-radius: 50%
-        .ti-box-1
-            background: $navbar-bg
-        .ti-box-2
-            background: $bg-2
-        .ti-box-3
-            background: $bg-3
+
+.search-main-box
+    padding: 20px
+
+.search-box
+    background: $search-box-bg
+    border-radius: 5px
+    padding: 20px
+    .search-title
+        margin-bottom: 10px
+        font-weight: bold
+
+.btn-x-a
+    &:hover
+        color: $footer-bg
+
+.search-button
+    background: $navbar-bg
+
+.hiw-button
+    background: $search-box-bg
+    margin-top: 15px
+    margin-left: 30%
+
+.it-works-main-box
+    width: 90%
+    .iw-title
+        margin-top: 20px
+        color: $navbar-bg
+    .it-row
+        opacity: .8
+
+.explanation-box
+    .explanation-title
+        margin-top: 15px
+    .explanation-i
+        font-size: 50px
+
+.ti-box
+    .ti-imgs
+        border-radius: 50%
+
+.ti-box-1
+    background: $navbar-bg
+
+.ti-box-2
+    background: $bg-2
+
+.ti-box-3
+    background: $bg-3
+
+.ti-text-box
+    .ti-title
+        margin-bottom: 15px
+    .ti-btn
+        background: white
 
 .ti-a-1
     color: $navbar-bg
